auto select serving runtime with additional model size info
auto select serving runtime with additional model size info

Squashed commit of the following:

commit 27db6cfa9b8f9b2410b5124dbb784c9c03629eb3
Author: Simo Lin <simo.lin@oracle.com>
Date:   Sun Aug 18 13:39:42 2024 -0700

    auto select serving runtime with additional model size info
